--- a/src/shared/ui/components/table/table.scss
+++ b/src/shared/ui/components/table/table.scss
@@ -3,17 +3,16 @@
 @use "sass/size";
 
 .Table {
-    display: table;
     border-radius: size.$task-radius;
     font-family: font.$text;
     margin-top: size.$gap;
 
-    & .MuiTableCell-root {
+    .MuiTableCell-root {
         border-bottom: none;
         padding: 0.5 * size.$gap;
     }
 
-    & table {
+    table {
         width: 100%;
         border-collapse: separate;
         border-spacing: 0;
@@ -41,8 +40,9 @@
         }
     }
 
-    &-column {
-        display: grid;
-        gap: 1.6ch;
+    &--mobile {
+        display: flex;
+        flex-flow: column nowrap;
+        gap: size.$gap;
     }
 }
