Fix dApp login feature flags & Extract dApp login feature

--- a/src/shared/ui/components/dialog/dialog.scss
+++ b/src/shared/ui/components/dialog/dialog.scss
@@ -5,6 +5,7 @@
 
 .Dialog {
     .MuiPaper-root {
+        min-width: size.$task-width;
         background-color: color.$black;
         color: color.$light-text;
         border-radius: size.$task-radius;
