chore: rename mobile -> compact

--- a/src/shared/ui/components/table/row.scss
+++ b/src/shared/ui/components/table/row.scss
@@ -29,7 +29,7 @@
         background-color: color.$lightest;
     }
 
-    &--mobile {
+    &--compact {
         display: flex;
         flex-direction: column;
         gap: 0.25 * size.$gap;
