--- a/src/shared/ui/components/table/table.scss
+++ b/src/shared/ui/components/table/table.scss
@@ -40,7 +40,7 @@
         }
     }
 
-    &--mobile {
+    &--compact {
         display: flex;
         flex-flow: column nowrap;
         gap: size.$gap;
