chore: rename Facet -> Tile

--- a/src/shared/ui/components/facet/facet.scss
+++ b/src/shared/ui/components/facet/facet.scss
@@ -1,7 +1,7 @@
 @use "sass/size";
 @use "sass/color";
 
-.Facet {
+.Tile {
     display: flex;
     flex-flow: column nowrap;
     position: relative;
