--- a/src/shared/ui/components/table/table.scss
+++ b/src/shared/ui/components/table/table.scss
@@ -9,7 +9,7 @@
 
     .MuiTableCell-root {
         border-bottom: none;
-        padding: 0.5 * size.$gap;
+        padding: calc(0.5 * size.$gap);
     }
 
     table {
@@ -31,18 +31,19 @@
 
             &:first-of-type {
                 text-align: left;
-                padding-left: 1.25 * size.$gap;
+                padding-left: calc(1.25 * size.$gap);
             }
 
             &:last-of-type {
-                padding-right: 1.25 * size.$gap;
+                padding-right: calc(1.25 * size.$gap);
             }
         }
     }
 
-    &--mobile {
+    &--compact {
         display: flex;
         flex-flow: column nowrap;
+        padding: calc(1.25 * size.$gap);
         gap: size.$gap;
     }
 }
