wip: Create tile for selected job information

--- a/src/pages/dao/jobs/jobs.scss
+++ b/src/pages/dao/jobs/jobs.scss
@@ -4,7 +4,14 @@
 
 .DaoJobsTab {
     display: grid;
-    grid-template: "jobsList" auto;
+    grid-template: "jobsList jobInfo" auto / 50%;
+
+    &-jobInfo {
+        grid-area: jobInfo;
+        padding-bottom: size.$gap;
+        position: relative;
+        overflow: hidden;
+    }
 
     &-jobsList {
         grid-area: jobsList;
