wip: Wrap job multicalls with spoiler

--- a/src/entities/job/ui/jobs-list.scss
+++ b/src/entities/job/ui/jobs-list.scss
@@ -1,2 +1,9 @@
 .JobsList {
+    .Table-row-content--compact:last-of-type {
+        & > span {
+            &:first-of-type {
+                display: none;
+            }
+        }
+    }
 }
