wip: Use data inspector component for job multicalls

--- a/src/entities/job/ui/jobs-list.scss
+++ b/src/entities/job/ui/jobs-list.scss
@@ -1,8 +1,21 @@
 .JobsList {
+    &-dataInspector {
+        &-label {
+            text-align: right;
+            font-weight: 800;
+        }
+    }
+
     .Table-row-content--compact:last-of-type {
+        align-items: flex-start;
+
         & > span {
             &:first-of-type {
-                display: none;
+                position: absolute;
+            }
+
+            &:last-of-type {
+                width: 100%;
             }
         }
     }
