wip: Customize data inspector spoiler appearance

--- a/src/shared/ui/components/data-inspector/data-inspector.scss
+++ b/src/shared/ui/components/data-inspector/data-inspector.scss
@@ -2,6 +2,10 @@
 @use "sass/size";
 
 .DataInspector {
+    &-label {
+        color: darken(color.$blue, 30%);
+    }
+
     &-body {
         border-radius: size.$task-radius;
         padding: calc(size.$gap / 2);
