wip: Fix data inspector behavior & appearance

--- a/src/shared/ui/components/data-inspector/data-inspector.scss
+++ b/src/shared/ui/components/data-inspector/data-inspector.scss
@@ -4,6 +4,10 @@
 .DataInspector {
     &-label {
         color: darken(color.$blue, 30%);
+
+        & > span {
+            cursor: pointer;
+        }
     }
 
     &-body {
