fix: remove redundant onClick prop

--- a/src/shared/ui/components/data-inspector/data-inspector.scss
+++ b/src/shared/ui/components/data-inspector/data-inspector.scss
@@ -3,6 +3,8 @@
 
 .DataInspector {
     &-label {
+        width: fit-content;
+        margin-left: auto;
         color: darken(color.$blue, 30%);
         cursor: pointer;
     }
