chore: set expandLevel to 5, move css styles to entity

--- a/src/entities/job/ui/jobs-list.scss
+++ b/src/entities/job/ui/jobs-list.scss
@@ -1,7 +1,8 @@
 .JobsList {
     &-dataInspector {
         &-label {
-            text-align: right;
+            width: fit-content;
+            margin-left: auto;
         }
     }
 
