--- a/src/families/base.scss
+++ b/src/families/base.scss
@@ -166,142 +166,63 @@
     }
 }
 
-.edit {
+form.edit {
     @include mixin.full;
+    @include mixin.center-items(flex-start);
     @include mixin.no-scrollbar;
+    flex-flow: column wrap;
+    padding: 0 size.$gap;
+    width: calc(100% - 2 * size.$gap);
     overflow-y: scroll;
-    .unitInput {
-        @include mixin.center-items(center, flex-start);
-        flex-flow: row nowrap;
-        .MuiTextField-root {
-            &:first-of-type {
-                flex: 2 1 auto;
-            }
-            &:last-of-type {
-                flex: 1 0 max-content;
-                margin-left: 0.25 * size.$gap;
-                .MuiInputBase-root {
-                    width: 100% !important;
-                    font-size: size.$small-text;
-                }
-            }
-        }
-        &:last-of-type .MuiTextField-root {
-            &:first-of-type fieldset {
-                border-radius: 0 0 0 size.$task-radius;
-            }
-            &:last-of-type fieldset {
-                border-radius: 0 0 size.$task-radius 0;
-            }
-        }
-    }
-    .checkbox {
-        @include mixin.center-items(flex-start, center);
-        flex-flow: row nowrap;
+
+    .empty-line {
         width: 100%;
-        p {
-            color: color.$light-text;
-            font-size: size.$small-text;
-        }
-        .MuiCheckbox-root {
-            color: color.$light;
-            &.Mui-checked {
-                color: color.$green;
-            }
-            .MuiSvgIcon-root {
-                font-size: size.$text;
-            }
-        }
+        height: 1em;
     }
-    .MuiTextField-root {
-        p.Mui-error {
-            color: color.$red;
-            font-weight: 800;
-            font-family: font.$text;
-            font-size: size.$small-text;
-            &::before {
-                content: "Error: ";
-            }
-        }
-        label {
-            font-family: font.$text;
-            font-weight: 800;
-            &.Mui-focused {
-                color: color.$light-text;
-            }
-            &.Mui-error {
-                color: color.$red;
-            }
-        }
-        .MuiOutlinedInput-root {
-            input,
-            textarea {
-                color: color.$white;
-                font-family: font.$code;
-                font-size: size.$small-text;
-            }
-            textarea {
-                @include mixin.no-scrollbar;
-                white-space: pre;
-                overflow-x: scroll !important;
-            }
-            fieldset {
-                border-color: color.$lightish;
-                border-width: 1px;
-                box-shadow: inset 0px 0px 30px 0px rgba(color.$white, 0.1);
-                border-radius: 0;
-                legend {
-                    background-color: color.$black;
-                    margin-left: -2px;
-                    padding: 2px;
-                    border-radius: 20px;
-                    visibility: visible;
-                }
-                legend > span {
-                    font-size: 0.75em;
-                    visibility: hidden;
-                }
-            }
-            &:hover fieldset {
-                border-color: color.$white;
-            }
-            &.Mui-focused fieldset {
-                border-color: color.$white;
-            }
-            &.Mui-error fieldset {
-                border-color: color.$red !important;
-            }
-        }
-        .MuiInput-underline {
-            &:hover::before,
-            &::before {
-                border-bottom-color: color.$lightish;
-            }
-            &:hover::after,
-            &::after {
-                border-bottom-color: color.$white;
-            }
-            input {
-                font-weight: 500;
-            }
-        }
-        *:not(input) {
-            color: color.$light-text;
-            font-size: 1em;
-        }
-        font-size: size.$text;
-    }
-    & > .MuiTextField-root {
-        &:first-of-type {
-            margin-top: 0;
-        }
-        &:nth-of-type(2) > .MuiOutlinedInput-root > fieldset {
-            border-radius: size.$task-radius size.$task-radius 0 0;
-        }
-        &:last-of-type > .MuiOutlinedInput-root > fieldset {
-            border-radius: 0 0 size.$task-radius size.$task-radius;
-        }
-    }
+
+    // .unitInput {
+    //     @include mixin.center-items(center, flex-start);
+    //     flex-flow: row nowrap;
+    //     .MuiTextField-root {
+    //         &:first-of-type {
+    //             flex: 2 1 auto;
+    //         }
+    //         &:last-of-type {
+    //             flex: 1 0 max-content;
+    //             margin-left: 0.25 * size.$gap;
+    //             .MuiInputBase-root {
+    //                 width: 100% !important;
+    //                 font-size: size.$small-text;
+    //             }
+    //         }
+    //     }
+    //     &:last-of-type .MuiTextField-root {
+    //         &:first-of-type fieldset {
+    //             border-radius: 0 0 0 size.$task-radius;
+    //         }
+    //         &:last-of-type fieldset {
+    //             border-radius: 0 0 size.$task-radius 0;
+    //         }
+    //     }
+    // }
+    // .checkbox {
+    //     @include mixin.center-items(flex-start, center);
+    //     flex-flow: row nowrap;
+    //     width: 100%;
+    //     p {
+    //         color: color.$light-text;
+    //         font-size: size.$small-text;
+    //     }
+    //     .MuiCheckbox-root {
+    //         color: color.$light;
+    //         &.Mui-checked {
+    //             color: color.$green;
+    //         }
+    //         .MuiSvgIcon-root {
+    //             font-size: size.$text;
+    //         }
+    //     }
+    // }
 }
 
 .MuiMenuItem-root {
