--- a/src/shared/ui/components/placeholder/placeholder.scss
+++ b/src/shared/ui/components/placeholder/placeholder.scss
@@ -6,6 +6,6 @@
     align-self: center;
     align-items: center;
     justify-content: center;
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
 }
