--- a/src/shared/ui/form-kit/fields/form-radio.scss
+++ b/src/shared/ui/form-kit/fields/form-radio.scss
@@ -1,7 +1,7 @@
 @use "sass/color";
 @use "sass/size";
 
-.FormFieldRadio {
+.FormRadio {
     &-button.MuiButtonBase-root {
         color: color.$white;
 
