wip: Don't change form label color on focus

--- a/src/shared/ui/form-kit/elements/form-label.scss
+++ b/src/shared/ui/form-kit/elements/form-label.scss
@@ -6,4 +6,8 @@
         font-size: size.$text;
         color: color.$white;
     }
+
+    &.is-focused.Mui-focused {
+        color: color.$white;
+    }
 }
