move ft transfer card to the new validation system
Co-authored-by: lennczar <lennczar@users.noreply.github.com>

--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -2,7 +2,7 @@
 @use "sass/mixin";
 @use "sass/size";
 
-.near-transfer-task {
+.near-ft-transfer-task {
     background: color.$lightest;
     .name {
         color: color.$text !important;
