fix: styling touch-up

--- a/src/shared/ui/components/date-time-picker/date-time-picker.scss
+++ b/src/shared/ui/components/date-time-picker/date-time-picker.scss
@@ -4,6 +4,8 @@
 
 .DateTimePicker {
     &-modal {
+        border-radius: size.$task-radius !important;
+
         * {
             font-family: font.$text !important;
             font-size: size.$text !important;
