add mft_transfer & mft_transfer_call cards

--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -2,7 +2,11 @@
 @use "sass/mixin";
 @use "sass/size";
 
-.near-ft-transfer-task {
+.near-ft-transfer-task,
+.near-ft-transfer-task,
+.near-ft-transfer-call-task,
+.near-mft-transfer-call-task,
+.near-mft-transfer-task {
     background: color.$lightest;
     .name {
         color: color.$text !important;
