--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -62,8 +62,8 @@
     align-self: center;
     align-items: center;
     justify-content: center;
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
 
     &::after {
         content: " ";
