wip: Fix styles and props naming

--- a/src/shared/ui/components/scrollable/scrollable.scss
+++ b/src/shared/ui/components/scrollable/scrollable.scss
@@ -5,8 +5,5 @@
     @include mixin.no-scrollbar;
     overflow-y: scroll;
     position: absolute;
-    top: calc(size.$large-text + 1.5 * size.$gap);
-    bottom: 0;
-    left: 0;
-    right: 0;
+    inset: 0;
 }
