--- a/src/shared/ui/components/tile/tile.scss
+++ b/src/shared/ui/components/tile/tile.scss
@@ -10,7 +10,7 @@
     background-color: color.$lightest;
     font-size: size.$small-text;
 
-    &-title {
+    &-heading {
         padding: 0.5 * size.$gap size.$gap;
         font-size: size.$large-text;
 
