--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -2,7 +2,8 @@
 @use "sass/mixin";
 @use "sass/size";
 
-.near-ft-transfer-task {
+.near-ft-transfer-task,
+.near-storage-withdraw-task {
     background: color.$lightest;
     .name {
         color: color.$text !important;
