wip: Fix scrolling for all tiles rather than specific ones

--- a/src/shared/ui/components/tile/tile.scss
+++ b/src/shared/ui/components/tile/tile.scss
@@ -22,8 +22,10 @@
     &-content {
         display: flex;
         flex-flow: column nowrap;
+        position: relative;
         width: auto;
         height: 100%;
+        overflow: hidden;
     }
 
     @for $i from 0 to 3 {
