wip: Cure ocd ( cleanup )

--- a/src/entities/job/ui/jobs-table.scss
+++ b/src/entities/job/ui/jobs-table.scss
@@ -1,7 +1,7 @@
 @use "sass/color";
 @use "sass/size";
 
-.JobsList {
+.JobsTable {
     &-body {
         .Table-row-content--compact:last-of-type {
             align-items: flex-start;
