--- a/src/shared/ui/components/button-group/button-group.scss
+++ b/src/shared/ui/components/button-group/button-group.scss
@@ -1,7 +1,16 @@
 @use "sass/mixin";
+@use "sass/size";
 
 .ButtonGroup {
     @include mixin.center-items(space-between, center);
     flex-flow: row nowrap;
     padding: size.$gap;
+
+    &--end {
+        margin-top: auto;
+    }
+
+    &--start {
+        margin-bottom: auto;
+    }
 }
