--- a/src/shared/ui/components/button-group/button-group.scss
+++ b/src/shared/ui/components/button-group/button-group.scss
@@ -4,7 +4,7 @@
 .ButtonGroup {
     @include mixin.center-items(space-between, center);
     flex-flow: row nowrap;
-    padding: size.$gap;
+    width: 100%;
 
     &--end {
         margin-top: auto;
