--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -3,7 +3,8 @@
 @use "sass/size";
 
 .near-ft-transfer-task,
-.near-deposit-and-stake-task {
+.near-deposit-and-stake-task,
+.near-unstake-task {
     background: color.$lightest;
     .name {
         color: color.$text !important;
